--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "amqplib": "^0.10.0",
-    "ts-node": "^10.8.2"
+    "ts-node": "^10.8.2",
+    "web-push": "^3.5.0"
   },
   "devDependencies": {
     "@types/amqplib": "^0.8.2",
